--- a/top_activity_viewer/static/main.html
+++ b/top_activity_viewer/static/main.html
@@ -56,6 +56,10 @@
 				<h2>v$active_session_history</h2>
 				<div id="chart_dygraph" style="width:30em; min-width:200px;"></div>
 				<div class="loader"></div>
+				<div class="zoom">
+					<i class="fa fa-minus-square-o" aria-hidden="true"></i>
+					<i class="fa fa-plus-square-o"  aria-hidden="true"></i>
+				</div>
 			</div>
 			<div id="legend">
 				<h2>Legend</h2>
