--- a/top_activity_viewer/static/main.html
+++ b/top_activity_viewer/static/main.html
@@ -45,7 +45,9 @@
 	</head>
 	<body>
 		<select id="conn_selector"><option></option></select>
-		<select id="rac_instance1"><option></option></select>
+		<select id="rac_instance1">
+			<option value="all">RAC Instances: All</option>
+		</select>
 		<select id="chart_source">
 			<option value="v$active_session_history">v$active_session_history</option>
 			<option value="dba_hist_active_sess_history">dba_hist_active_sess_history</option>
